[gd_scene load_steps=2 format=3 uid="uid://cosxq62l3h0p8"]

[ext_resource type="Script" path="res://engine/audio.gd" id="1"]

[node name="Audio" type="Node"]
process_mode = 2
script = ExtResource("1")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -9.0

[node name="SoundPlayers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SoundPlayer1" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer2" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer3" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer4" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer5" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer6" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer7" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundPlayer8" type="AudioStreamPlayer" parent="SoundPlayers"]
volume_db = -15.0

[node name="SoundLoopers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SoundLooper1" type="AudioStreamPlayer" parent="SoundLoopers"]

[node name="SoundLooper2" type="AudioStreamPlayer" parent="SoundLoopers"]

[node name="Timers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DelayedTimer1" type="Timer" parent="Timers"]
one_shot = true
